kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
